--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                 </div>
 
                 <div class="info__social">
-                    <a href="https://www.linkedin.com/in/joaogabriel0/" target="_blank" class="info__social-link" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com/" target="_blank" class="info__social-link" rel="noopener noreferrer">
                         <span class="info__social-icon">
                             <i class="ri-linkedin-box-line"></i>
                         </span>
                     </a>
 
-                    <a href="https://dribbble.com/devjoaog" target="_blank" class="info__social-link" rel="noopener noreferrer">
+                    <a href="https://dribbble.com/" target="_blank" class="info__social-link" rel="noopener noreferrer">
                         <span class="info__social-icon">
                             <i class="ri-dribbble-fill"></i>
                         </span>
                     </a>
 
-                    <a href="https://github.com/devjoaogabriel" target="_blank" class="info__social-link" rel="noopener noreferrer">
+                    <a href="https://github.com/" target="_blank" class="info__social-link" rel="noopener noreferrer">
                         <span class="info__social-icon">
                             <i class="ri-github-fill"></i>
                         </span>
